--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -71,7 +71,7 @@
                             </div>
                             <div *ngIf="field.type=='text'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
-                                <input type="text" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:0}}" maxlength="{{field.maxlength?field.maxlength:1000}}">
+                                <input type="text" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:0}}" maxlength="{{field.maxlength?field.maxlength:1000}}" [disabled]="field.disabled">
                                 <div  *ngIf="i.invalid && (i.dirty || i.touched)">
                                     <div *ngIf="i.errors?.required">
                                         <p class="text-alert">{{field.name}} is required</p>
@@ -80,7 +80,7 @@
                             </div>
                             <div *ngIf="field.type=='numeric'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
-                                <input inputmode="numeric" oninput="this.value = this.value.replace(/\D+/g, '')" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:1000}}" maxlength="{{field.maxlength?field.maxlength:1000}}">
+                                <input inputmode="numeric" oninput="this.value = this.value.replace(/\D+/g, '')" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:1000}}" maxlength="{{field.maxlength?field.maxlength:1000}}" [disabled]="field.disabled">
                                 <div  *ngIf="i.invalid && (i.dirty || i.touched)">
                                     <div *ngIf="i.errors?.required">
                                         <p class="text-alert">{{field.name}} is required</p>
@@ -100,7 +100,7 @@
                             <div *ngIf="field.type=='select'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
                                 <!-- <input type="text" class="form-control" (keyup)="filterOptions($event)" placeholder="Type a text to filter ↓" /> -->
-                                <select (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel">
+                                <select (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel" [disabled]="field.disabled">
                                     <option value="">Select</option>
                                     <ng-container *ngFor="let option of field.options; let i = index">
                                         <option value="{{option.value}}" selected="{{option.selected}}">{{option.name}}</option>
