Avance módulo veterinaria

--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -103,7 +103,7 @@
                                 <select (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel" [disabled]="field.disabled">
                                     <option value="">Select</option>
                                     <ng-container *ngFor="let option of field.options; let i = index">
-                                        <option value="{{option.value}}" selected="{{option.selected}}">{{option.name}}</option>
+                                        <option value="{{option.value}}">{{option.name}}</option>
                                     </ng-container>
                                 </select>
                                 <div  *ngIf="i.invalid && (i.dirty || i.touched)">
@@ -147,7 +147,7 @@
                                 </div> -->
                                   
                             </div>
-                            <div *ngIf="field.type=='select-multiple'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
+                            <!-- <div *ngIf="field.type=='select-multiple'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
                                 <select multiple (change)="changeSelect($event)" class="form-select" name="{{field.name}}" [(ngModel)]="field.value" id="{{field.name}}" [required]="field.required" #i="ngModel">
                                     <option value="">Select</option>
@@ -160,7 +160,7 @@
                                         <p class="text-alert">{{field.name}} is required</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div *ngIf="field.type=='file'" [ngClass]="field.full==false ? 'form-group mb-2 col-5' : 'form-group mb-2'">
                                 <div *ngIf="field.value!='' && field.name.includes('image')" class="mb-2"><label>Selected image: </label><br>
                                     <img [src]="srcPreview" id="preview-{{field.name}}" alt="" width="100" height="100" (click)="openFullscreen(content,0,field.name,srcPreview);"><br>
