Mejoras visuales y nuevo tipo de campo textarea

--- a/plataformaGestionPredial/src/app/main/main.component.html
+++ b/plataformaGestionPredial/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div style="height:90vh;background-color: burlywood;" class="row">
+<div style="height:90vh;background-color: white;" class="row">
     <div id="sidebar" class="col-2">
         <div id="brand" class="row">
             <img src="../assets/predio.svg" alt="predio" routerLink="/dashboard" >
