--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -59,7 +59,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div *ngIf="field.type=='checkbox'" [ngClass]="field.full==false ? 'form-check mb-2 pt-2' : 'form-check mb-2 pt-2'">
+                            <div *ngIf="field.type=='checkbox'" [ngClass]="field.full==false ? 'form-check mb-2 pt-2 ms-3' : 'form-check mb-2 pt-2 ms-3'">
                                 <label class="form-check-label" for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
                                 <input class="form-check-input" type="checkbox"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [checked]="field.value" [required]="field.required" #i="ngModel">
                                 <!-- <input class="form-check-input mt-0" type="radio" value="" aria-label="Radio button for following text input"> -->
@@ -72,6 +72,15 @@
                             <div *ngIf="field.type=='text'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
                                 <input type="text" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:0}}" maxlength="{{field.maxlength?field.maxlength:1000}}" [disabled]="field.disabled">
+                                <div  *ngIf="i.invalid && (i.dirty || i.touched)">
+                                    <div *ngIf="i.errors?.required">
+                                        <p class="text-alert">{{field.name}} is required</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div *ngIf="field.type=='textarea'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
+                                <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
+                                <textarea class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:0}}" maxlength="{{field.maxlength?field.maxlength:1000}}" [disabled]="field.disabled"></textarea>
                                 <div  *ngIf="i.invalid && (i.dirty || i.touched)">
                                     <div *ngIf="i.errors?.required">
                                         <p class="text-alert">{{field.name}} is required</p>
