--- a/plataformaGestionPredial/src/app/bovines/bovines.component.html
+++ b/plataformaGestionPredial/src/app/bovines/bovines.component.html
@@ -1,2 +1,1 @@
-<app-forms (cambioSelect)="desplegarImagenBovino($event)" [configurations]="configurations" [callBackFunction]="registerBovine" [fields]="fields"></app-forms>
-<!-- <app-forms></app-forms> -->
+<app-forms (cambioSelect)="displayBovineImage($event)" [configurations]="configurations" [callBackFunction]="registerBovine" [fields]="fields"></app-forms>
