Se implementa nuevo flujo para dar de baja bovinos

--- a/plataformaGestionPredial/src/app/bovines/delete/delete.component.html
+++ b/plataformaGestionPredial/src/app/bovines/delete/delete.component.html
@@ -1,1 +1,1 @@
-<app-forms (cambioSelect)="desplegarImagenBovino($event)" [configurations]="configurations" [callBackFunction]="registerBovine" [fields]="fields"></app-forms>
+<app-forms [configurations]="configurations" [callBackFunction]="deleteBovine" [fields]="fields"></app-forms>
