Se implementa raceService

--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -173,7 +173,7 @@
                     <td><i title="See identifiers" style="cursor: pointer;" (click)="openModalDialogCustomClass(content,country.id,country.name)" class="fa-solid fa-list-ol p-2"></i>
                         <i *ngIf="country.type=='Vaca'" title="See children" style="cursor: pointer;" (click)="openModalDialogCustomClass2(content,country.id,country.name)" class="fa-solid fa-clipboard-list p-2"></i>
                         <i title="Delete (only on case of die)" (click)="deleteBovine(country.id)" style="cursor: pointer;" class="fa-solid fa-book-skull p-2"></i>
-                        <i title="Vaccinate" class="fa-solid fa-syringe" style="cursor: pointer;"></i>
+                        <i title="Vaccinate" class="fa-solid fa-syringe p-2" style="cursor: pointer;"></i>
                     </td>
                   </tr>
                 </ng-template>
